eleanor/kernel/eq36/parsers/Data0Parser.py
# Generated from grammars/Data0.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class Data0Parser(Parser):

    grammarFileName = "Data0.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>", "'.'", "'Miscellaneous'", "'Temperature limits'", "'temperatures'", "'No_Data'", "'NAN'", "'nan'",
        "'NaN'", "'Nan'", "'pressures'", "'debye huckel a'", "'debye huckel aphi'", "'debye huckel b'", "'bdot'",
        "'cco2'", "'log k for eh reaction'", "'bdot parameters'", "'-'", "'ca combinations:'",
        "'cc' and aa' combinations:'", "'nc and na combinations:'", "'nn combinations:'", "'nn' combinations:'",
        "'cc'a and aa'c combinations:'", "'nca combinations:'", "'nnn' combinations:'", "'alpha(1)'", "'='",
        "'alpha(2)'", "'beta(0):'", "'beta(1):'", "'beta(2):'", "'Cphi:'", "'theta:'", "'lambda:'", "'mu:'", "'psi:'",
        "'zeta:'", "'a1'", "'a2'", "'a3'", "'a4'", "'elements'", "'basis species'", "'date last revised'", "'revised'",
        "'sp.type'", "'keys'", "'charge'", "'element(s):'", "'V0PrTr'", "'YMP'", "'auxiliary basis species'",
        "'species'", "'aqueous species'", "'solids'", "'liquids'", "'gases'", "'solid solutions'", "'components'",
        "'end members'", "'type'", "'model parameters'", "'site parameters'", "'references'", "'stop.'"
    ]

    symbolicNames = [
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "NL", "MAGIC", "SEPERATOR", "WORD", "WS", "NUMBER", "COMMENT", "SQ"
    ]

    RULE_data0 = 0
    RULE_magicLine = 1
    RULE_restOfLine = 2
    RULE_header = 3
    RULE_seperator = 4
    RULE_paramsSection = 5
    RULE_sectionHeader = 6
    RULE_temperatures = 7
    RULE_temperatureRange = 8
    RULE_numberGrid = 9
    RULE_numberLine = 10
    RULE_number = 11
    RULE_pressures = 12
    RULE_modelParams = 13
    RULE_debyeHuckelModelParams = 14
    RULE_debyeHuckelA = 15
    RULE_debyeHuckelB = 16
    RULE_bdot = 17
    RULE_cco2 = 18
    RULE_pitzerModelParams = 19
    RULE_debyeHuckelAphi = 20
    RULE_eHLogK = 21
    RULE_modelSection = 22
    RULE_bdotSpeciesSection = 23
    RULE_bdotSpecies = 24
    RULE_bdotSpeciesName = 25
    RULE_pitzerCombinations = 26
    RULE_caCombinations = 27
    RULE_ccPrimeAaPrimeCombinations = 28
    RULE_ncNaCombinations = 29
    RULE_nnCombinations = 30
    RULE_nnPrimeCombinations = 31
    RULE_ccPrimeAAaPrimeCCombinations = 32
    RULE_ncaCombinations = 33
    RULE_nnnPrimeCombinations = 34
    RULE_pitzerAlphaBetaCphiParams = 35
    RULE_pitzerLambdaMuParams = 36
    RULE_pitzerLambdaParams = 37
    RULE_pitzerMuParams = 38
    RULE_pitzerPsiParams = 39
    RULE_pitzerThetaParams = 40
    RULE_pitzerZetaParams = 41
    RULE_pitzerTuple = 42
    RULE_alpha1 = 43
    RULE_alpha2 = 44
    RULE_beta0 = 45
    RULE_beta1 = 46
    RULE_beta2 = 47
    RULE_cphi = 48
    RULE_theta = 49
    RULE_lambda_ = 50
    RULE_mu = 51
    RULE_psi = 52
    RULE_zeta = 53
    RULE_a1 = 54
    RULE_a2 = 55
    RULE_a3 = 56
    RULE_a4 = 57
    RULE_elementsSection = 58
    RULE_element = 59
    RULE_elementName = 60
    RULE_basisSpeciesSection = 61
    RULE_basisSpecies = 62
    RULE_speciesName = 63
    RULE_speciesNote = 64
    RULE_dateRevised = 65
    RULE_dateRevisedKey = 66
    RULE_date = 67
    RULE_speciesType = 68
    RULE_keys = 69
    RULE_chargeLine = 70
    RULE_composition = 71
    RULE_formulaGrid = 72
    RULE_formulaLine = 73
    RULE_formulaTerm = 74
    RULE_componentName = 75
    RULE_volumeLine = 76
    RULE_volume = 77
    RULE_ympQualified = 78
    RULE_auxiliaryBasisSpeciesSection = 79
    RULE_auxiliaryBasisSpecies = 80
    RULE_dissociation = 81
    RULE_logKGrid = 82
    RULE_aqueousSpeciesSection = 83
    RULE_aqueousSpecies = 84
    RULE_solidsSection = 85
    RULE_solid = 86
    RULE_liquidsSection = 87
    RULE_liquid = 88
    RULE_gasesSection = 89
    RULE_gas = 90
    RULE_solidSolutionsSection = 91
    RULE_solidSolution = 92
    RULE_components = 93
    RULE_solidSolutionModelSpec = 94
    RULE_solidSolutionModelType = 95
    RULE_solidSolutionModelParams = 96
    RULE_possiblyEmptyNumberGrid = 97
    RULE_siteParams = 98
    RULE_referenceSection = 99
    RULE_references = 100
    RULE_theRest = 101

    ruleNames = [
        "data0", "magicLine", "restOfLine", "header", "seperator", "paramsSection", "sectionHeader", "temperatures",
        "temperatureRange", "numberGrid", "numberLine", "number", "pressures", "modelParams", "debyeHuckelModelParams",
        "debyeHuckelA", "debyeHuckelB", "bdot", "cco2", "pitzerModelParams", "debyeHuckelAphi", "eHLogK",
        "modelSection", "bdotSpeciesSection", "bdotSpecies", "bdotSpeciesName", "pitzerCombinations", "caCombinations",
        "ccPrimeAaPrimeCombinations", "ncNaCombinations", "nnCombinations", "nnPrimeCombinations",
        "ccPrimeAAaPrimeCCombinations", "ncaCombinations", "nnnPrimeCombinations", "pitzerAlphaBetaCphiParams",
        "pitzerLambdaMuParams", "pitzerLambdaParams", "pitzerMuParams", "pitzerPsiParams", "pitzerThetaParams",
        "pitzerZetaParams", "pitzerTuple", "alpha1", "alpha2", "beta0", "beta1", "beta2", "cphi", "theta", "lambda_",
        "mu", "psi", "zeta", "a1", "a2", "a3", "a4", "elementsSection", "element", "elementName", "basisSpeciesSection",
        "basisSpecies", "speciesName", "speciesNote", "dateRevised", "dateRevisedKey", "date", "speciesType", "keys",
        "chargeLine", "composition", "formulaGrid", "formulaLine", "formulaTerm", "componentName", "volumeLine",
        "volume", "ympQualified", "auxiliaryBasisSpeciesSection", "auxiliaryBasisSpecies", "dissociation", "logKGrid",
        "aqueousSpeciesSection", "aqueousSpecies", "solidsSection", "solid", "liquidsSection", "liquid", "gasesSection",
        "gas", "solidSolutionsSection", "solidSolution", "components", "solidSolutionModelSpec",
        "solidSolutionModelType", "solidSolutionModelParams", "possiblyEmptyNumberGrid", "siteParams",
        "referenceSection", "references", "theRest"
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    T__44 = 45
    T__45 = 46
    T__46 = 47
    T__47 = 48
    T__48 = 49
    T__49 = 50
    T__50 = 51
    T__51 = 52
    T__52 = 53
    T__53 = 54
    T__54 = 55
    T__55 = 56
    T__56 = 57
    T__57 = 58
    T__58 = 59
    T__59 = 60
    T__60 = 61
    T__61 = 62
    T__62 = 63
    T__63 = 64
    T__64 = 65
    T__65 = 66
    NL = 67
    MAGIC = 68
    SEPERATOR = 69
    WORD = 70
    WS = 71
    NUMBER = 72
    COMMENT = 73
    SQ = 74

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class Data0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def magicLine(self):
            return self.getTypedRuleContext(Data0Parser.MagicLineContext, 0)

        def header(self):
            return self.getTypedRuleContext(Data0Parser.HeaderContext, 0)

        def paramsSection(self):
            return self.getTypedRuleContext(Data0Parser.ParamsSectionContext, 0)

        def modelSection(self):
            return self.getTypedRuleContext(Data0Parser.ModelSectionContext, 0)

        def elementsSection(self):
            return self.getTypedRuleContext(Data0Parser.ElementsSectionContext, 0)

        def basisSpeciesSection(self):
            return self.getTypedRuleContext(Data0Parser.BasisSpeciesSectionContext, 0)

        def auxiliaryBasisSpeciesSection(self):
            return self.getTypedRuleContext(Data0Parser.AuxiliaryBasisSpeciesSectionContext, 0)

        def aqueousSpeciesSection(self):
            return self.getTypedRuleContext(Data0Parser.AqueousSpeciesSectionContext, 0)

        def solidsSection(self):
            return self.getTypedRuleContext(Data0Parser.SolidsSectionContext, 0)

        def liquidsSection(self):
            return self.getTypedRuleContext(Data0Parser.LiquidsSectionContext, 0)

        def gasesSection(self):
            return self.getTypedRuleContext(Data0Parser.GasesSectionContext, 0)

        def solidSolutionsSection(self):
            return self.getTypedRuleContext(Data0Parser.SolidSolutionsSectionContext, 0)

        def referenceSection(self):
            return self.getTypedRuleContext(Data0Parser.ReferenceSectionContext, 0)

        def theRest(self):
            return self.getTypedRuleContext(Data0Parser.TheRestContext, 0)

        def EOF(self):
            return self.getToken(Data0Parser.EOF, 0)

        def getRuleIndex(self):
            return Data0Parser.RULE_data0

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterData0"):
                listener.enterData0(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitData0"):
                listener.exitData0(self)

    def data0(self):

        localctx = Data0Parser.Data0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_data0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.magicLine()
            self.state = 205
            self.header()
            self.state = 206
            self.paramsSection()
            self.state = 207
            self.modelSection()
            self.state = 208
            self.elementsSection()
            self.state = 209
            self.basisSpeciesSection()
            self.state = 210
            self.auxiliaryBasisSpeciesSection()
            self.state = 211
            self.aqueousSpeciesSection()
            self.state = 212
            self.solidsSection()
            self.state = 213
            self.liquidsSection()
            self.state = 214
            self.gasesSection()
            self.state = 215
            self.solidSolutionsSection()
            self.state = 216
            self.referenceSection()
            self.state = 217
            self.theRest()
            self.state = 218
            self.match(Data0Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MagicLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAGIC(self):
            return self.getToken(Data0Parser.MAGIC, 0)

        def restOfLine(self):
            return self.getTypedRuleContext(Data0Parser.RestOfLineContext, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(Data0Parser.NL)
            else:
                return self.getToken(Data0Parser.NL, i)

        def getRuleIndex(self):
            return Data0Parser.RULE_magicLine

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMagicLine"):
                listener.enterMagicLine(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMagicLine"):
                listener.exitMagicLine(self)

    def magicLine(self):

        localctx = Data0Parser.MagicLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_magicLine)
        try:
            self.state = 229
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 220
                self.match(Data0Parser.MAGIC)
                self.state = 221
                self.match(Data0Parser.T__0)
                self.state = 222
                self.restOfLine()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 223
                self.match(Data0Parser.MAGIC)
                self.state = 225
                self._errHandler.sync(self)
                _alt = 1
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 224
                        self.match(Data0Parser.NL)

                    else:
                        raise NoViableAltException(self)
                    self.state = 227
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RestOfLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(Data0Parser.NL)
            else:
                return self.getToken(Data0Parser.NL, i)

        def getRuleIndex(self):
            return Data0Parser.RULE_restOfLine

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRestOfLine"):
                listener.enterRestOfLine(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRestOfLine"):
                listener.exitRestOfLine(self)

    def restOfLine(self):

        localctx = Data0Parser.RestOfLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_restOfLine)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 234
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -2) != 0) or ((((_la - 64)) & ~0x3f) == 0 and
                                                                        ((1 << (_la - 64)) & 2039) != 0):
                self.state = 231
                _la = self._input.LA(1)
                if _la <= 0 or _la == 67:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 236
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 238
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 237
                    self.match(Data0Parser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 240
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(Data0Parser.NL, 0)

        def seperator(self):
            return self.getTypedRuleContext(Data0Parser.SeperatorContext, 0)

        def SEPERATOR(self, i: int = None):
            if i is None:
                return self.getTokens(Data0Parser.SEPERATOR)
            else:
                return self.getToken(Data0Parser.SEPERATOR, i)

        def getRuleIndex(self):
            return Data0Parser.RULE_header

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHeader"):
                listener.enterHeader(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHeader"):
                listener.exitHeader(self)

    def header(self):

        localctx = Data0Parser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_header)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 245
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 242
                    _la = self._input.LA(1)
                    if _la <= 0 or _la == 69:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                self.state = 247
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)

            self.state = 248
            self.match(Data0Parser.NL)
            self.state = 249
            self.seperator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SeperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEPERATOR(self):
            return self.getToken(Data0Parser.SEPERATOR, 0)

        def NL(self):
            return self.getToken(Data0Parser.NL, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(Data0Parser.WS)
            else:
                return self.getToken(Data0Parser.WS, i)

        def getRuleIndex(self):
            return Data0Parser.RULE_seperator

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSeperator"):
                listener.enterSeperator(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSeperator"):
                listener.exitSeperator(self)

    def seperator(self):

        localctx = Data0Parser.SeperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_seperator)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 251
            self.match(Data0Parser.SEPERATOR)
            self.state = 255
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 71:
                self.state = 252
                self.match(Data0Parser.WS)
                self.state = 257
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 258
            self.match(Data0Parser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sectionHeader(self):
            return self.getTypedRuleContext(Data0Parser.SectionHeaderContext, 0)

        def temperatures(self):
            return self.getTypedRuleContext(Data0Parser.TemperaturesContext, 0)

        def pressures(self):
            return self.getTypedRuleContext(Data0Parser.PressuresContext, 0)

        def modelParams(self):
            return self.getTypedRuleContext(Data0Parser.ModelParamsContext, 0)

        def eHLogK(self):
            return self.getTypedRuleContext(Data0Parser.EHLogKContext, 0)

        def seperator(self):
            return self.getTypedRuleContext(Data0Parser.SeperatorContext, 0)

        def MAGIC(self):
            return self.getToken(Data0Parser.MAGIC, 0)

        def getRuleIndex(self):
            return Data0Parser.RULE_paramsSection

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParamsSection"):
                listener.enterParamsSection(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParamsSection"):
                listener.exitParamsSection(self)

    def paramsSection(self):

        localctx = Data0Parser.ParamsSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramsSection)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 260
            _la = self._input.LA(1)
            if not (_la == 2 or _la == 68):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 261
            self.sectionHeader()
            self.state = 262
            self.temperatures()
            self.state = 263
            self.pressures()
            self.state = 264
            self.modelParams()
            self.state = 265
            self.eHLogK()
            self.state = 266
            self.seperator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SectionHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def restOfLine(self):
            return self.getTypedRuleContext(Data0Parser.RestOfLineContext, 0)

        def seperator(self):
            return self.getTypedRuleContext(Data0Parser.SeperatorContext, 0)

        def getRuleIndex(self):
            return Data0Parser.RULE_sectionHeader

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSectionHeader"):
                listener.enterSectionHeader(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSectionHeader"):
                listener.exitSectionHeader(self)

    def sectionHeader(self):

        localctx = Data0Parser.SectionHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sectionHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 268
            self.restOfLine()
            self.state = 269
            self.seperator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TemperaturesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
